<resources>
    <string name="app_name">Nanodegree Portfolio App</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nandroid Apps</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Better</string>
    <string name="materialize">Bacon Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="title_activity_project1">Project1</string>
    <string name="hello_world">Hello world!</string>
</resources>
