<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffcef1ff"
    android:longClickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        style="@style/buttonAlign"
        android:onClick="mediaStreamerClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        style="@style/buttonAlign"
        android:onClick="superDuo1Click" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        style="@style/buttonAlign"
        android:onClick="superDuo2Click" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        style="@style/buttonAlign"
        android:onClick="antTerminatorClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button5"
        style="@style/buttonAlign"
        android:layout_below="@+id/button4"
        android:onClick="materializeClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        style="@style/myButton"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="capstoneClick"
        android:nestedScrollingEnabled="false" />
</RelativeLayout>
